[gd_scene load_steps=10 format=3 uid="uid://bk2sw51iswc8e"]

[ext_resource type="Texture2D" uid="uid://5ks2st5d7ri2" path="res://Content/Assets/UI/Background.png" id="1_8shnc"]
[ext_resource type="Script" uid="uid://41wepuuba76j" path="res://Content/Classes/UIManagment/UIManager.gd" id="1_hcmuh"]
[ext_resource type="Texture2D" uid="uid://dlgjknn3ihwet" path="res://Content/Assets/UI/Menu.png" id="2_hcmuh"]
[ext_resource type="Texture2D" uid="uid://c0ewqct877f5p" path="res://Content/Assets/UI/Button.png" id="3_4ls13"]
[ext_resource type="FontFile" uid="uid://2lp54jjc5bhb" path="res://Content/Assets/Fonts/zx_spectrum-7_bold.ttf" id="4_4ls13"]
[ext_resource type="Texture2D" uid="uid://c80tcrh27mawm" path="res://Content/Assets/UI/Settings_menu.png" id="4_un2e4"]
[ext_resource type="Texture2D" uid="uid://xga6ve2ux052" path="res://Content/Assets/UI/Main_menu_placeholder.png" id="5_pd731"]
[ext_resource type="Texture2D" uid="uid://bmt5mg0u8qvsi" path="res://Content/Assets/UI/Empty_sheet_menu.png" id="6_ynag5"]
[ext_resource type="Texture2D" uid="uid://r30uer4tp55g" path="res://Content/Assets/UI/leaderboard_placeholder.png" id="7_eaahh"]

[node name="UISegment" type="Control"]
z_index = -1
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hcmuh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -397.5
offset_right = 650.0
offset_bottom = 397.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_8shnc")

[node name="MenuWindow" type="TextureRect" parent="CanvasLayer"]
offset_left = 377.0
offset_top = 200.0
offset_right = 497.0
offset_bottom = 344.0
scale = Vector2(2, 2)
texture = ExtResource("2_hcmuh")

[node name="Quickplay" type="Button" parent="CanvasLayer/MenuWindow"]
layout_mode = 0
offset_left = 8.5
offset_top = 25.5
offset_right = 112.5
offset_bottom = 56.5
theme_override_fonts/font = ExtResource("4_4ls13")
theme_override_font_sizes/font_size = 10
text = "ИГРАТЬ"
icon = ExtResource("3_4ls13")
flat = true
autowrap_trim_flags = 0
icon_alignment = 1

[node name="Settings" type="Button" parent="CanvasLayer/MenuWindow"]
layout_mode = 0
offset_left = 9.0
offset_top = 52.5
offset_right = 113.0
offset_bottom = 83.5
theme_override_fonts/font = ExtResource("4_4ls13")
theme_override_font_sizes/font_size = 10
theme_override_icons/icon = ExtResource("3_4ls13")
action_mode = 0
text = "НАСТРОЙКИ"
icon = ExtResource("3_4ls13")
flat = true
autowrap_trim_flags = 0
icon_alignment = 1

[node name="Leaderboard" type="Button" parent="CanvasLayer/MenuWindow"]
layout_mode = 0
offset_left = 8.5
offset_top = 81.0
offset_right = 112.5
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_4ls13")
theme_override_font_sizes/font_size = 10
text = "ЛИДЕРЫ"
icon = ExtResource("3_4ls13")
flat = true
autowrap_trim_flags = 0
icon_alignment = 1

[node name="Back" type="Button" parent="CanvasLayer/MenuWindow"]
layout_mode = 0
offset_left = 9.0
offset_top = 109.0
offset_right = 113.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("4_4ls13")
theme_override_font_sizes/font_size = 10
text = "НАЗАД"
icon = ExtResource("3_4ls13")
flat = true
autowrap_trim_flags = 0
icon_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MenuWindow"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 81.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("4_4ls13")
theme_override_font_sizes/font_size = 10
text = "ГЛАВНОЕ МЕНЮ"

[node name="SectionSettings" type="TextureRect" parent="CanvasLayer"]
offset_left = 637.0
offset_top = 297.0
offset_right = 765.0
offset_bottom = 393.0
scale = Vector2(2, 2)
texture = ExtResource("4_un2e4")

[node name="SectionMain" type="TextureRect" parent="CanvasLayer"]
z_index = 1
offset_left = 637.0
offset_top = 130.0
offset_right = 745.0
offset_bottom = 309.0
scale = Vector2(2, 2)
texture = ExtResource("5_pd731")

[node name="SectionLeaderboard" type="TextureRect" parent="CanvasLayer"]
offset_left = 637.0
offset_top = 152.0
offset_right = 765.0
offset_bottom = 320.0
scale = Vector2(2, 2)
texture = ExtResource("6_ynag5")
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/SectionLeaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = -2.5
offset_right = 118.0
offset_bottom = 37.5
texture = ExtResource("7_eaahh")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/SectionLeaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = 24.0
offset_right = 118.0
offset_bottom = 64.0
texture = ExtResource("7_eaahh")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/SectionLeaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 118.0
offset_bottom = 90.0
texture = ExtResource("7_eaahh")
stretch_mode = 3

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/SectionLeaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = 76.0
offset_right = 118.0
offset_bottom = 116.0
texture = ExtResource("7_eaahh")
stretch_mode = 3

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/SectionLeaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = 102.0
offset_right = 118.0
offset_bottom = 142.0
texture = ExtResource("7_eaahh")
stretch_mode = 3

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer/SectionLeaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = 128.0
offset_right = 118.0
offset_bottom = 168.0
texture = ExtResource("7_eaahh")
stretch_mode = 3

[connection signal="pressed" from="CanvasLayer/MenuWindow/Quickplay" to="." method="_on_quickplay_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuWindow/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuWindow/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuWindow/Back" to="." method="_on_back_pressed"]
